# crud/src/docs/openapi.yaml
@@ -1,111 +1,326 @@
-openapi: 3.0.0
+openapi: 3.0.1
 info:
-  title: API Rest para empleados
-  description: Esta es una API para gestionar operaciones CRUD ala tabla de empleados de la BBDD de coforge en Mariadb.
-  version: 1.0.0
+  title: OpenAPI definition
+  version: v0
 servers:
-  - url: http://localhost:8080/employee
-    description: Servidor de desarrollo local
+  - url: http://localhost:8080
+    description: Generated server url
 paths:
+  /workCenter/update/{id}:
+    put:
+      tags:
+        - work-center-controller
+      operationId: updateWorkCenter
+      parameters:
+        - name: id
+          in: path
+          required: true
+          schema:
+            type: integer
+            format: int64
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/WorkCenter'
+        required: true
+      responses:
+        '200':
+          description: OK
+          content:
+            '*/*':
+              schema:
+                $ref: '#/components/schemas/WorkCenter'
+  /employee/update:
+    put:
+      tags:
+        - employee-controller
+      operationId: update
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/Employee'
+        required: true
+      responses:
+        '200':
+          description: OK
+          content:
+            '*/*':
+              schema:
+                $ref: '#/components/schemas/Employee'
+  /department/update/{id}:
+    put:
+      tags:
+        - department-controller
+      operationId: updateDepartment
+      parameters:
+        - name: id
+          in: path
+          required: true
+          schema:
+            type: integer
+            format: int64
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/Department'
+        required: true
+      responses:
+        '200':
+          description: OK
+          content:
+            '*/*':
+              schema:
+                $ref: '#/components/schemas/Department'
+  /workCenter/save:
+    post:
+      tags:
+        - work-center-controller
+      operationId: saveWorkCenter
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/WorkCenter'
+        required: true
+      responses:
+        '200':
+          description: OK
+          content:
+            '*/*':
+              schema:
+                $ref: '#/components/schemas/WorkCenter'
+  /employee/save:
+    post:
+      tags:
+        - employee-controller
+      operationId: save
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/Employee'
+        required: true
+      responses:
+        '200':
+          description: OK
+          content:
+            '*/*':
+              schema:
+                $ref: '#/components/schemas/Employee'
+  /department/save:
+    post:
+      tags:
+        - department-controller
+      operationId: saveDepartment
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/Department'
+        required: true
+      responses:
+        '200':
+          description: OK
+          content:
+            '*/*':
+              schema:
+                $ref: '#/components/schemas/Department'
+  /workCenter/list:
+    get:
+      tags:
+        - work-center-controller
+      operationId: getAllWorkCenters
+      responses:
+        '200':
+          description: OK
+          content:
+            '*/*':
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/WorkCenter'
+  /workCenter/list/{id}:
+    get:
+      tags:
+        - work-center-controller
+      operationId: getWorkCenterById
+      parameters:
+        - name: id
+          in: path
+          required: true
+          schema:
+            type: integer
+            format: int64
+      responses:
+        '200':
+          description: OK
+          content:
+            '*/*':
+              schema:
+                $ref: '#/components/schemas/WorkCenter'
   /employee:
     get:
-      summary: Mensaje de bienvenida
+      tags:
+        - employee-controller
+      operationId: hello
       responses:
         '200':
-          description: Bienvenido a la API Rest para empleados!
-        '500':
-          description: Error del servidor
+          description: OK
+          content:
+            '*/*':
+              schema:
+                type: string
   /employee/list:
     get:
-      summary: Lista todos los empleados
+      tags:
+        - employee-controller
+      operationId: getAll
       responses:
         '200':
-          description: Lista de empleados
+          description: OK
           content:
-            application/json:
+            '*/*':
               schema:
                 type: array
                 items:
                   $ref: '#/components/schemas/Employee'
   /employee/list/{employeeId}:
     get:
-      summary: Obtiene un empleado por su ID
+      tags:
+        - employee-controller
+      operationId: getById
       parameters:
         - name: employeeId
           in: path
           required: true
           schema:
             type: integer
+            format: int64
       responses:
         '200':
-          description: Detalles del empleado
+          description: OK
           content:
-            application/json:
+            '*/*':
               schema:
                 $ref: '#/components/schemas/Employee'
-        '404':
-          description: Empleado no encontrado
-  /employee/save:
-    post:
-      summary: Guardar un empleado
-      requestBody:
-        required: true
-        content:
-          application/json:
-            schema:
-              $ref: '#/components/schemas/Employee'
+  /department/list:
+    get:
+      tags:
+        - department-controller
+      operationId: getAllDepartments
       responses:
         '200':
-          description: Empleado guardado
-        '500':
-          description: Error interno del servidor. No se pudo guardar el empleado.
-  /employee/update:
-    put:
-      summary: Actualizar un empleado
-      requestBody:
-        required: true
-        content:
-          application/json:
-            schema:
-              $ref: '#/components/schemas/Employee'
+          description: OK
+          content:
+            '*/*':
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/Department'
+  /department/list/{id}:
+    get:
+      tags:
+        - department-controller
+      operationId: getDepartmentById
+      parameters:
+        - name: id
+          in: path
+          required: true
+          schema:
+            type: integer
+            format: int64
       responses:
         '200':
-          description: Empleado actualizado
-        '500':
-          description: Error interno del servidor. No se pudo guardar el empleado.
+          description: OK
+          content:
+            '*/*':
+              schema:
+                $ref: '#/components/schemas/Department'
+  /workCenter/delete/{id}:
+    delete:
+      tags:
+        - work-center-controller
+      operationId: deleteWorkCenter
+      parameters:
+        - name: id
+          in: path
+          required: true
+          schema:
+            type: integer
+            format: int64
+      responses:
+        '200':
+          description: OK
   /employee/delete/{employeeId}:
     delete:
-      summary: Elimina un empleado por su ID
+      tags:
+        - employee-controller
+      operationId: delete
       parameters:
         - name: employeeId
           in: path
           required: true
           schema:
             type: integer
+            format: int64
       responses:
-        '204':
-          description: Empleado eliminado
-        '404':
-          description: Empleado no encontrado
-        '500':
-          description: Error del servidor
+        '200':
+          description: OK
+  /department/delete/{id}:
+    delete:
+      tags:
+        - department-controller
+      operationId: deleteDepartment
+      parameters:
+        - name: id
+          in: path
+          required: true
+          schema:
+            type: integer
+            format: int64
+      responses:
+        '200':
+          description: OK
 components:
   schemas:
-    Employee:
+    WorkCenter:
       type: object
       properties:
         id:
           type: integer
-          description: Este es un identificador único para cada empleado.
+          format: int64
+        location:
+          type: string
+    Department:
+      type: object
+      properties:
+        id:
+          type: integer
+          format: int64
+        name:
+          type: string
+    Employee:
+      required:
+        - address
+        - firstName
+        - lastName
+      type: object
+      properties:
+        id:
+          type: integer
+          format: int64
         firstName:
           type: string
-          description: Nombre del empleado.
         lastName:
           type: string
-          description: Apellidos del empleado.
         address:
           type: string
-          description: Esta es la dirección del empleado.
         email:
           type: string
-          description: Este es el correo electrónico del empleado.
+        workCenter:
+          $ref: '#/components/schemas/WorkCenter'
+        department:
+          $ref: '#/components/schemas/Department'
