# crud/src/main/java/com/api/crud/controller/DepartmentController.java
@@ -1,0 +1,67 @@
+package com.api.crud.controller;
+
+import com.api.crud.entity.Department;
+import com.api.crud.entity.WorkCenter;
+import com.api.crud.service.DepartmentService;
+import com.api.crud.service.WorkCenterService;
+import jakarta.validation.Valid;
+import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.http.HttpStatus;
+import org.springframework.http.ResponseEntity;
+import org.springframework.web.bind.annotation.*;
+
+import java.util.List;
+
+@CrossOrigin
+@RestController
+@RequestMapping("/department")
+public class DepartmentController {
+    @Autowired
+    private DepartmentService departmentService;
+
+    @GetMapping("/list")
+    public ResponseEntity<List<Department>> getAllDepartments() {
+        List<Department> departments = departmentService.getAllDepartments();
+        return new ResponseEntity<>(departments, HttpStatus.OK);
+    }
+
+    @GetMapping("/list/{id}")
+    public ResponseEntity<Department> getDepartmentById(@PathVariable Long id) {
+        Department department = departmentService.getDepartmentById(id);
+        if (department != null) {
+            return new ResponseEntity<>(department, HttpStatus.OK);
+        } else {
+            return new ResponseEntity<>(HttpStatus.NOT_FOUND);
+        }
+    }
+
+    @PostMapping("/save")
+    public ResponseEntity<Department> saveDepartment(@Valid @RequestBody Department department) {
+        Department savedDepartment = departmentService.saveDepartment(department);
+        return new ResponseEntity<>(savedDepartment, HttpStatus.CREATED);
+    }
+
+    @PutMapping("/update/{id}")
+    public ResponseEntity<Department> updateDepartment(@PathVariable Long id,@Valid @RequestBody Department departmentDetails) {
+        Department existingdepartment = departmentService.getDepartmentById(id);
+        if (existingdepartment != null) {
+            existingdepartment.setName(departmentDetails.getName());
+            Department updatedDepartment = departmentService.saveDepartment(existingdepartment);
+            return new ResponseEntity<>(updatedDepartment, HttpStatus.OK);
+        } else {
+            return new ResponseEntity<>(HttpStatus.NOT_FOUND);
+        }
+    }
+
+    @DeleteMapping("/delete/{id}")
+    public ResponseEntity<Void> deleteDepartment(@PathVariable Long id) {
+        departmentService.deleteDepartment(id);
+        return new ResponseEntity<>(HttpStatus.NO_CONTENT);
+    }
+
+    @ExceptionHandler(RuntimeException.class)
+    public ResponseEntity<String> handleRuntimeException(RuntimeException ex) {
+        return new ResponseEntity<>(ex.getMessage(), HttpStatus.INTERNAL_SERVER_ERROR);
+    }
+
+}
