# crud/src/main/java/com/api/crud/controller/WorkCenterController.java
@@ -2,6 +2,7 @@ package com.api.crud.controller;
 
 import com.api.crud.entity.WorkCenter;
 import com.api.crud.service.WorkCenterService;
+import jakarta.validation.Valid;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
@@ -13,6 +14,7 @@ import java.util.List;
 @RestController
 @RequestMapping("/workCenter")
 public class WorkCenterController {
+
     @Autowired
     private WorkCenterService workCenterService;
 
@@ -33,9 +35,21 @@ public class WorkCenterController {
     }
 
     @PostMapping("/save")
-    public ResponseEntity<WorkCenter> saveWorkCenter(@RequestBody WorkCenter workCenter) {
+    public ResponseEntity<WorkCenter> saveWorkCenter(@Valid @RequestBody WorkCenter workCenter) {
         WorkCenter savedWorkCenter = workCenterService.saveWorkCenter(workCenter);
         return new ResponseEntity<>(savedWorkCenter, HttpStatus.CREATED);
+    }
+
+    @PutMapping("/update/{id}")
+    public ResponseEntity<WorkCenter> updateWorkCenter(@PathVariable Long id, @Valid @RequestBody WorkCenter workCenterDetails) {
+        WorkCenter existingWorkCenter = workCenterService.getWorkCenterById(id);
+        if (existingWorkCenter != null) {
+            existingWorkCenter.setLocation(workCenterDetails.getLocation());
+            WorkCenter updatedWorkCenter = workCenterService.saveWorkCenter(existingWorkCenter);
+            return new ResponseEntity<>(updatedWorkCenter, HttpStatus.OK);
+        } else {
+            return new ResponseEntity<>(HttpStatus.NOT_FOUND);
+        }
     }
 
     @DeleteMapping("/delete/{id}")
@@ -49,3 +63,4 @@ public class WorkCenterController {
         return new ResponseEntity<>(ex.getMessage(), HttpStatus.INTERNAL_SERVER_ERROR);
     }
 }
+
