# crud/src/main/java/com/api/crud/service/DepartmentService.java
@@ -1,0 +1,43 @@
+package com.api.crud.service;
+
+import com.api.crud.entity.Department;
+import com.api.crud.repository.DepartmentRepository;
+import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.stereotype.Service;
+
+import java.util.List;
+import java.util.Optional;
+
+@Service
+public class DepartmentService {
+
+    @Autowired
+    private DepartmentRepository departmentRepository;
+
+    public List<Department> getAllDepartments() {
+        return departmentRepository.findAll();
+    }
+
+    public Department getDepartmentById(Long id) {
+        Optional<Department> department = departmentRepository.findById(id);
+        if (department.isPresent()) {
+            return department.get();
+        } else {
+            throw new RuntimeException("Department not found by id : " + id);
+        }
+    }
+
+    public Department saveDepartment(Department department) {
+        return departmentRepository.save(department);
+    }
+
+    public void deleteDepartment(Long id) {
+        Optional<Department> department = departmentRepository.findById(id);
+        if (department.isPresent()) {
+            departmentRepository.deleteById(id);
+        } else {
+            throw new RuntimeException("Cannot delete. Department not found by id : " + id);
+        }
+    }
+
+}
